# raws

./: Cargo.toml  LICENSE
src/: aws_clients.rs  config.rs  credentials.rs  data_loader.rs  main.rs  pages.rs  regions.rs
src/pages/: credentials.rs  regions.rs  service_pages.rs
src/pages/service_pages/: cloudwatch_pages.rs  services_home.rs
src/pages/service_pages/cloudwatch_pages/: alarms.rs  home.rs
