[package]
name = "raws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = "1.0.x"
serde_json = "1.0.x"
egui = "0.27.2"
eframe = { version = "0.27.2", features = [ "default", ] }
aws-config = { version= "1.5.3", features = ["behavior-version-latest"] }
aws-types = "1.3.2"
aws-runtime = "1.3.0"
aws-sdk-cloudwatch = "1.x"
tokio = { version = "1", features = ["full"] }
